A......... [ZBX-5116] prevented escaping forward slashes while encoding API response to JSON text (Cemeris)
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.5rc1

New features:

Bug fixes:
.......PS. [ZBX-11765] fixed incorrect rollback in process of escalation for DB2 database (Sergejs)

--------------------------------------------------------------------------------
Changes for 3.2.4

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, French, Japanese, Polish, Portuguese (Brazil) translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.4rc1

New features:
........S. [ZBX-11781] fixed potential buffer overflow in the housekeeper process (abs)
.......PS. [ZBXNEXT-3681] improved bulk inserts for Oracle database backend (wiper)
........S. [ZBXNEXT-3669] optimized trigger expression batch processing to avoid recalculation of identical functions (wiper)
..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)

Bug fixes:
...G...... [ZBX-11568] fixed wrong number round for cpu statistics (abs)
.......PS. [ZBX-10902] fixed wrong averages in web monitoring if a web server doesn't respond to a request (abs)
..F....... [ZBX-11365] fixed button and multiselect positioning in action operations edit form (Ivo, Pavel)
........S. [ZBX-11740] fixed empty value handling in event correlation on oracle databases (wiper)
.......PS. [ZBX-11655] fixed Oracle and MySQL column limit calculation when using UTF-8 (vso)
........S. [ZBX-11703] removed possibility to execute commit without transaction in processing LLD rules (Sergejs)
........S. [ZBX-11705] fixed event correlation when using databases other than mysql (wiper)